# unia

./: .gitignore  Cargo.toml  flake.nix
examples/: gemini_file.rs  gemini_simple.rs  gemini_streaming.rs  openai_simple.rs  openai_streaming.rs
src/: agent.rs  client.rs  http.rs  lib.rs  mcp.rs  model.rs  options.rs  providers.rs  sse.rs  stream.rs
src/api/: anthropic.rs  gemini.rs  openai.rs
src/providers/: gemini.rs  openai.rs
