[package]
name = "unai"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
async-trait = "0.1"
futures = "0.3"
bytes = "1.9"
itertools = "0.14.0"
nonempty = { version = "0.12.0", features = ["serialize"] }
